--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
 
+    <!--Responsividade-->
+    <link rel="stylesheet" href="responsive.css">
+
     <!--Owl CSS-->
     <link rel="stylesheet" href="js/owl.carousel.min.css">
     <link rel="stylesheet" href="js/owl.theme.default.min.css">
@@ -65,6 +68,8 @@
             </div>
         </div>
     </main>
+    <!--FILMES ALEATÓRIOS-->
+    <h3>Filmes Populares:</h3>
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
@@ -82,7 +87,87 @@
             <div class="item">
                 <img class="box-filme" src="img/imagem5.jpg" alt="" srcset="">
             </div>
-            
+            <div class="item">
+                <img class="box-filme" src="img/imagem6.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem7.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem9.9.jpg" alt="" srcset="">
+            </div>
+
+        </div>
+    </div>
+    <!--FILMES (SAGA) VELOZES E FURIOSOS-->
+    <h3>Filmes Velozes e Furiosos (saga):</h3>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/imagem1.1.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem2.2.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem3.3.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem4.4.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem5.5.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem6.6.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem7.7.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem8.8.jpg" alt="" srcset="">
+            </div>
+
+        </div>
+    </div>
+    <!--FILMES (SAGA) MARVEL-->
+    <h3>Filmes da Marvel:</h3>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/imagem9.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem10.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem11.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem12.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem13.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem14.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem15.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem16.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem17.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem18.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imagem19.jpg" alt="" srcset="">
+            </div>
+
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
